--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   "license": "AGPL3+",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.0.0",
     "dice-expression-evaluator": "^0.1.2"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode production"
   },
   "devDependencies": {
+    "@types/mini-css-extract-plugin": "^1.4.3",
     "@types/node": "^15.0.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.4",
+    "css-loader": "^5.2.4",
+    "mini-css-extract-plugin": "^1.6.0",
     "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
