--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode production",
-    "serve": "./node_modules/.bin/webpack serve"
+    "dev": "./node_modules/.bin/webpack --mode development --watch",
+    "serve": "./node_modules/.bin/webpack serve --mode development"
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^1.4.3",
@@ -22,6 +23,7 @@
     "@types/webpack-dev-server": "^3.11.4",
     "css-loader": "^5.2.4",
     "mini-css-extract-plugin": "^1.6.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
